load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_jars = [
        "//125-freeze/src/main/proto:125-freeze_java_proto",
    ],
    resources = [
        "//125-freeze/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-freeze/src/main/proto:125-freeze_java_proto",
        "//960-persistence:module",
        "//980-commons:module",
        "//950-ng-core:module",
        "//959-ng-persistence:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        #        "@maven//:javax_validation_validation_api",
        "@maven//:org_springframework_spring_tx",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = ["//125-freeze/src/test/resources:resource"],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//990-commons-test:module",
    ],
)

run_tests()

run_analysis()
