# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//125-freeze/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-freeze/src/main/proto:125-freeze_java_proto",
        "//878-ng-common-utilities:module",
        "//960-persistence:module",
        "//960-yaml-sdk:module",
        "//980-commons:module",
        "//980-commons/src/main/java/io/harness/sanitizer:module",
        "//950-ng-core:module",
        "//959-ng-persistence:module",
        "//953-yaml-commons:module",
        "//clients/access-control/sdk:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        #        "@maven//:javax_validation_validation_api",
        "@maven//:org_springframework_spring_tx",
        "//clients/audit:module",
        "//platform-service/modules/audit-service/contracts:module",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = ["//125-freeze/src/test/resources:resource"],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//990-commons-test:module",
    ],
)

run_tests()

run_analysis()
