load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "@maven//:com_google_guava_guava",
] + [
    "//:lombok",
    "//127-cd-nextgen-entities:module",
    "//400-rest:module",
    "//958-migration-sdk:module",
    "//980-commons:module",
    "//970-ng-commons:module",
    "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    "@maven//:com_fasterxml_jackson_core_jackson_core",
    "@maven//:com_fasterxml_jackson_core_jackson_databind",
]

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//126-instance/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

test_dependencies = shared_dependencies + [
    ":module",
    "//960-persistence:supporter-test",
]

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = [
        "//126-instance/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = test_dependencies,
)

run_analysis()

run_tests()
