load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//tools/bazel/pmd:defs.bzl", "pmd")

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    data = [],
    resources = [],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = [
        "//:lombok",
        "//888-pms-client:module",
        "//908-access-control-admin-client:module",
        "//930-ng-core-clients:module",
        "//940-feature-flag:module",
        "//940-resource-group-beans:module",
        "//945-ng-audit-client:module",
        "//950-events-api:module",
        "//950-events-api/src/main/proto:950_events_api_proto",
        "//950-ng-audit-commons:module",
        "//955-outbox-sdk:module",
        "//960-ng-core-beans:module",
        "//960-persistence:module",
        "@maven//:com_google_inject_guice",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

#java_library(
#    name = "tests",testonly=True,
#    srcs = glob(["src/test/**/*.java"]),
#    visibility = ["//visibility:public"],
#    deps = [
#        "module",
#        "//:lombok",
#    ],
#)

#run_tests()

checkstyle()

pmd()
