load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "test_targets_list")
load("//tools/bazel/pmd:defs.bzl", "pmd")

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//400-rest:module",
        "//440-connector-nextgen:module",
        "//940-secret-manager-client:module",
        "//950-delegate-tasks-beans:module",
        "//955-delegate-beans:module",
        "//965-git-sync-commons:module",
        "//970-ng-commons:module",
        "//980-commons:module",
        "@maven//:io_fabric8_fabric8_utils",
        "@maven//:org_jetbrains_annotations",
        "@maven//:ru_vyarus_guice_validator",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//136-git-sync-manager/src/test/resources:resource",
        "//136-git-sync-manager/src/test/resources/software/wings/service/impl/webhook:resource",
    ],
    resources = ["//136-git-sync-manager/src/test/resources:resource"],
    visibility = ["//visibility:public"],
    deps = [
        "module",
        "//:lombok",
        "//960-persistence:module",
        "//960-persistence:supporter-test",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

checkstyle()

pmd()
