# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_guava_guava",
    ] + [
        "//:lombok",
        "//400-rest:module",
        "//440-connector-nextgen:module",
        "//878-ng-common-utilities:module",
        "//940-primary-version-manager:module",
        "//940-secret-manager-client:module",
        "//950-delegate-tasks-beans:module",
        "//952-scm-java-client:module",
        "//954-connector-beans:module",
        "//955-delegate-beans:module",
        "@maven//:com_google_inject_guice",
        "@maven//:org_eclipse_jgit_org_eclipse_jgit",
        "@maven//:org_eclipse_jgit_org_eclipse_jgit_ssh_jsch",
        "@maven//:org_hibernate_validator_hibernate_validator",
        "//953-git-sync-commons:module",
        "//970-ng-commons:module",
        "//980-commons:module",
        "//960-api-services:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:io_fabric8_fabric8_utils",
        "@maven//:io_grpc_grpc_alts",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_auth",
        "@maven//:io_grpc_grpc_context",
        "@maven//:io_grpc_grpc_core",
        "@maven//:io_grpc_grpc_grpclb",
        "@maven//:io_grpc_grpc_netty",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_services",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_jetbrains_annotations",
        "@maven//:ru_vyarus_guice_validator",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_mongodb",
        "@maven//:org_springframework_guice_spring_guice",
        "@maven//:org_springframework_spring_aop",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_expression",
        "@maven//:org_springframework_spring_jcl",
        "@maven//:org_springframework_spring_tx",
        "@maven//:org_springframework_spring_web",
        "@maven//:dev_morphia_morphia_core",
        "@maven//:org_reflections_reflections",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//136-git-sync-manager/src/test/resources:resource",
        "//136-git-sync-manager/src/test/resources/software/wings/service/impl/webhook:resource",
    ],
    resources = ["//136-git-sync-manager/src/test/resources:resource"],
    visibility = ["//visibility:public"],
    deps = [
        "module",
        "//:lombok",
        "//952-scm-java-client:module",
        "//960-persistence:module",
        "//960-persistence:supporter-test",
        "//970-ng-commons:module",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:io_github_benas_random_beans",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:org_powermock_powermock_core",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

run_analysis()
