load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sources")
load("//:macros.bzl", "sonarqube_test")
load("//tools/bazel/pmd:defs.bzl", "pmd")

sources()

java_library(
    name = "maven_deps",
    visibility = ["//visibility:public"],
    exports = [
        "//12-commons:maven_deps",
        "//12-commons:module",
        "@maven//:com_amazonaws_aws_java_sdk_core",
        "@maven//:com_amazonaws_aws_java_sdk_ec2",
        "@maven//:com_esotericsoftware_yamlbeans_yamlbeans",
        "@maven//:com_google_apis_google_api_services_monitoring",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_sumologic_api_client_sumo_java_client",
        "@maven//:io_fabric8_kubernetes_api",
        "@maven//:io_fabric8_kubernetes_client",
        "@maven//:io_fabric8_kubernetes_model",
        "@maven//:io_kubernetes_client_java",
        "@maven//:io_kubernetes_client_java_api",
        "@maven//:org_json_json",
        "@maven//:org_mongodb_mongo_java_driver",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
)

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "maven_deps",
        "//:lombok",
    ],
)

java_library(
    name = "tests",
    srcs = glob(["src/test/**/*.java"]),
    resources = [
        "//14-api-services-beans/src/test/resources:resource",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "maven_deps",
        "module",
        "//:lombok",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ],
)

run_tests()

checkstyle()

sonarqube_test(
    name = "sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":maven_deps",
        ":module",
    ],
)

pmd()
