load("@rules_java//java:defs.bzl", "java_binary")
load("//:GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sources")
load("//:macros.bzl", "sonarqube_test")
load("//tools/pmd:defs.bzl","pmd")

sources()
java_library(
    name = "maven_deps",
    exports = [
                "//12-commons:module",
                "//13-grpc-api:module",
                "//14-api-services-beans:module",
                "@maven//:com_github_scribejava_scribejava_apis",
                "@maven//:com_github_scribejava_scribejava_core",
                "@maven//:io_fabric8_kubernetes_api",
                "@maven//:io_fabric8_kubernetes_client",
                "@maven//:me_snowdrop_istio_client_uberjar",
                "@maven//:net_jodah_expiringmap",
                "@maven//:commons_io_commons_io",
                "@maven//:org_jooq_joor",
                "@maven//:io_fabric8_kubernetes_server_mock",
                "@maven//:org_powermock_powermock_api_mockito",
                "@maven//:junit_junit",
                "@maven//:org_assertj_assertj_core",
                "@maven//:com_google_guava_guava",
                "@maven//:org_apache_httpcomponents_fluent_hc",
                "@maven//:org_apache_httpcomponents_httpcore",
                "@maven//:io_fabric8_openshift_client",
                "@maven//:me_snowdrop_istio_common",
                "@maven//:me_snowdrop_istio_model",
                "@maven//:me_snowdrop_istio_client",
                "@maven//:joda_time_joda_time",
                "@maven//:com_microsoft_azure_azure",
                "@maven//:io_kubernetes_client_java_extended",
                "@maven//:org_eclipse_jgit_org_eclipse_jgit",
                "@maven//:org_eclipse_jgit_org_eclipse_jgit_http_apache",
                "@maven//:com_google_apis_google_api_services_container",
                "@maven//:com_google_code_findbugs_annotations",
                "@maven//:com_google_inject_guice",
                "@maven//:org_slf4j_slf4j_api",
                "@maven//:com_squareup_okhttp3_okhttp",
                "@maven//:com_squareup_retrofit2_retrofit",
                "@maven//:org_apache_commons_commons_lang3",
                "@maven//:com_fasterxml_jackson_core_jackson_annotations",
                "@maven//:com_squareup_retrofit2_converter_jackson",
                "@maven//:com_microsoft_azure_azure_client_authentication",
                "@maven//:com_microsoft_azure_azure_client_runtime",
                "@maven//:com_microsoft_rest_client_runtime",
                "@maven//:com_microsoft_azure_adal4j",
                "@maven//:com_microsoft_azure_azure_mgmt_monitor",
                "@maven//:com_microsoft_azure_azure_mgmt_compute",
                "@maven//:com_microsoft_azure_azure_mgmt_resources",
                "@maven//:com_microsoft_azure_azure_mgmt_network",
                "@maven//:io_fabric8_fabric8_utils",
                "@maven//:com_intellij_annotations",
                "@maven//:org_zeroturnaround_zt_exec",
                "@maven//:com_google_code_gson_gson",
                "@maven//:commons_collections_commons_collections",
                "@maven//:com_google_http_client_google_http_client_jackson2",
                "@maven//:com_google_http_client_google_http_client",
                "@maven//:com_google_api_client_google_api_client",
                "@maven//:commons_codec_commons_codec",
                "@maven//:io_kubernetes_client_java_api",
                "@maven//:io_fabric8_kubernetes_model",
                "@maven//:org_hibernate_hibernate_validator",
                "@maven//:com_squareup_okhttp3_logging_interceptor",
                "@maven//:com_fasterxml_jackson_core_jackson_core",
                "@maven//:com_fasterxml_jackson_core_jackson_databind",
                "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
                "@maven//:io_kubernetes_client_java",
                "@maven//:com_github_tomakehurst_wiremock",
                "@maven//:org_mongodb_morphia_morphia",
                "@maven//:org_mockito_mockito_core",
                "@maven//:org_powermock_powermock_module_junit4",
                "@maven//:org_powermock_powermock_core",
                "@maven//:com_squareup_okio_okio"

        ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "test_deps",
    exports = [
        "//990-commons-test:module",
    ]
)

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    deps = [
            "maven_deps",
            "//:lombok",
    ],
   data = [
           "//15-api-services/src/test/resources:resource",
      ],
   visibility = ["//visibility:public"],
)

java_library(
    name = "tests",
    srcs = glob(["src/test/**/*.java"]),
    deps = [
        "maven_deps",
        "test_deps",
        "module",
        "//:lombok",
    ],
    data = [
        "//15-api-services/src/test/resources:resource",
    ],
   visibility = ["//visibility:public"],
)

run_tests(
    test_files = glob(["src/test/**/*Test.java"],exclude = ["**/ApiServiceTest.java"],),
    deps = [
            "module",
            "maven_deps",
            "test_deps",
            "tests",
            "//:lombok",
    ],
    runtime_deps = [
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "//15-api-services/src/test/resources:resources",
    ],
    testonly = 1,
)

checkstyle()

sonarqube_test(
    name="sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":maven_deps",
        ":module",
    ],
)

pmd()